@@ -9,7 +9,10 @@ jsoup changelog
   * Improvement: added support for Deflate encoding.
     <https://github.com/jhy/jsoup/pull/982>
 
-  * Fixed an issue where boolean attributes with empty string values were not collapsing in HTML output.
+  * Bugfix: The Element.text() for <div>One</div>Two was "OneTwo", not "One Two".
+    <https://github.com/jhy/jsoup/issues/812>
+
+  * Bugfix: boolean attributes with empty string values were not collapsing in HTML output.
     <https://github.com/jhy/jsoup/issues/985>
 
 *** Release 1.11.2 [2017-Nov-19]
